kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-test
  labels:
    name: restaurant-test
    environment: test
    istio-injection: enabled
